Fixed Hero Box On Tablet & Desktop

--- a/styles/what-is-hpp.css
+++ b/styles/what-is-hpp.css
@@ -473,9 +473,15 @@
     margin-top: 18rem !important;
 }
 
-@media (min-width: 768px) {
+@media screen (min-width: 768px) and (max-width: 991px) {
     .hpp-dtc-m-hero .content {
         margin-top: 28rem !important;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .hpp-dtc-m-hero .content {
+        margin-top: 13rem !important;
     }
 }
 
